# howling-trader

./: .bazelrc  .clang-format  .gitignore  MODULE.bazel  STYLE_GUIDE.md  docker-compose.yaml  fetch.sh  schedule_trade.sh
.github/workflows/: ci.yml
api/: BUILD  alpaca.cc  alpaca.h  json.cc  schwab.cc  schwab.h
api/schwab/: BUILD  configuration.cc  configuration.h  connect.cc  connect.h  oauth.cc  oauth.h  oauth_internal.cc  oauth_internal.h
cli/: BUILD  colorize.cc  colorize.h  printing.cc  printing.h
containers/: BUILD  buffered_stream.h  buffered_stream_test.cc  circular_buffer.h  circular_buffer_test.cc  vector.h
data/: BUILD  account.proto  aggregate.cc  aggregate.h  analyzer.cc  analyzer.h  candle.proto  load_analyzer.cc  load_analyzer.h  market.proto  stock.proto  trade.proto  trading_state.cc  trading_state.h  utilities.cc  utilities.h
data/analyzers/: BUILD  bollinger.cc  bollinger.h  howling.cc  howling.h  macd.cc  macd.h  market_hours.cc  market_hours.h  noop.h  profit.cc  profit.h  zig_zag.cc  zig_zag.h
data/history/AAPL/: 2025-10-13.textproto  2025-10-14.textproto  2025-10-15.textproto  2025-10-16.textproto  2025-10-17.textproto  2025-10-20.textproto  2025-10-21.textproto  2025-10-22.textproto  2025-10-23.textproto  2025-10-24.textproto  2025-10-27.textproto  2025-10-28.textproto  2025-10-29.textproto  2025-10-30.textproto  2025-11-03.textproto  2025-11-04.textproto  2025-11-05.textproto  2025-11-06.textproto  2025-11-07.textproto  2025-11-10.textproto  2025-11-11.textproto  2025-11-12.textproto  2025-11-13.textproto  2025-11-14.textproto  2025-11-17.textproto  2025-11-18.textproto  2025-11-19.textproto  2025-11-20.textproto  2025-11-21.textproto  2025-11-24.textproto  2025-11-25.textproto  2025-11-26.textproto  2025-11-28.textproto  2025-12-01.textproto  2025-12-02.textproto  2025-12-03.textproto  2025-12-04.textproto  2025-12-05.textproto  2025-12-08.textproto  2025-12-09.textproto  (+35 more)
data/history/AMD/: 2025-10-16.textproto  2025-10-17.textproto  2025-10-20.textproto  2025-10-21.textproto  2025-10-22.textproto  2025-10-23.textproto  2025-10-24.textproto  2025-10-27.textproto  2025-10-28.textproto  2025-10-29.textproto  2025-10-30.textproto  2025-10-31.textproto  2025-11-03.textproto  2025-11-04.textproto  2025-11-05.textproto  2025-11-06.textproto  2025-11-07.textproto  2025-11-10.textproto  2025-11-11.textproto  2025-11-12.textproto  2025-11-13.textproto  2025-11-14.textproto  2025-11-17.textproto  2025-11-18.textproto  2025-11-19.textproto  2025-11-20.textproto  2025-11-21.textproto  2025-11-24.textproto  2025-11-25.textproto  2025-11-26.textproto  2025-11-28.textproto  2025-12-01.textproto  (+41 more)
environment/: BUILD  configuration.cc  configuration.h  init.cc  init.h  runfiles.cc
files/: BUILD  files.cc  files.h  files_test.cc
howling_tools/: BUILD  evaluate.cc  execute.cc  fetch.cc  init.cc  runfiles.cc  runfiles.h  runfiles_init.h  visualize.cc
infrastructure/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/app/: .terraform.lock.hcl  main.tf  moved.tf  outputs.tf  variables.tf  versions.tf
infrastructure/platform/: .terraform.lock.hcl  main.tf  moved.tf  outputs.tf  variables.tf  versions.tf
logs/: BUILD  json_sink.cc  json_sink.h  stdout_sink.cc  stdout_sink.h
net/: BUILD  connect.cc  connect.h  local.wolfe.dev.crt  local.wolfe.dev.key  request.cc  request.h  url.h
patches/: BUILD  jsoncpp.BUILD  openssl_as_boringssl.patch  postgres.BUILD
services/: BUILD  authenticate.cc  authenticate.h  authenticate_test.cc  authenticate_test_utils.h  candle_storage.h  database.h  market_watch.cc  market_watch.h  mock_database.h  mock_security.h  mock_token_refresher.h  security.h  service_base.h
services/db/: BUILD  constants.h  crypto.cc  crypto.h  crypto_test.cc  database_test_interface.h  environment.cc  environment.h  make_database.cc  make_database.h  postgres_database.cc  postgres_database.h  postgres_database_test.cc  register.cc  register.h  run_postgres_database_test.sh  schema_upgrade.cc  sqlite_database.cc  sqlite_database.h  sqlite_database_test.cc
services/oauth/: BUILD  auth_client.cc  auth_client.h  auth_client_test.cc  auth_refresh.cc  auth_service.cc  auth_service.h  auth_service_integration_test.cc  auth_service_test.cc  mock_auth_service.h  mock_oauth_exchanger.h  mock_telegram_server.cc  mock_telegram_server.h  notification.cc  notification.h  notification_test.cc  oauth_exchanger.h  oauth_exchanger_impl.cc  oauth_exchanger_impl.h  oauth_http_service.cc  oauth_http_service.h  oauth_http_service_test.cc  server.cc
services/registry/: BUILD  register_service.h  registry.h  registry_internal.cc  registry_test.cc  test_utils.h
services/security/: BUILD  bao_client.cc  bao_client.h  bao_client_test.cc  certificate_bundle.h  mock_bao_server.cc  mock_bao_server.h  register.cc  register.h
strings/: BUILD  format.cc  format.h  format_test.cc  json.cc  json.h  json_test.cc  parse.cc  parse.h  parse_test.cc  trim.cc  trim.h  trim_test.cc
time/: BUILD  conversion.cc  conversion.h
trading/: BUILD  executor.cc  executor.h  metrics.cc  metrics.h  pricing.cc  pricing.h  trading_state.cc  trading_state.h
(+302 files in other folders)
