""""""

module(name = "howling-trader", version = "1.0")

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "boost.asio", version = "1.89.0.bcr.1")
bazel_dep(name = "boost.beast", version = "1.89.0.bcr.1")
bazel_dep(name = "boost.url", version = "1.89.0.bcr.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "jsoncpp", version = "1.9.6")
bazel_dep(name = "protobuf", version = "33.1")
bazel_dep(name = "rules_cc", version = "0.2.14")
