""""""

module(
    name = "howling-trader",
    version = "1.0",
)

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "boost.asio", version = "1.89.0.bcr.1")
bazel_dep(name = "boost.beast", version = "1.89.0.bcr.1")
bazel_dep(name = "boost.url", version = "1.89.0.bcr.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "jsoncpp", version = "1.9.6")
archive_override(
    module_name = "jsoncpp",
    integrity = "sha256-+Ttt1855axPQLBCLyfeYEiRaguV3WBxMmqvlcHXJDqI=",
    urls = ["https://github.com/open-source-parsers/jsoncpp/archive/refs/tags/1.9.6.tar.gz"],
    strip_prefix = "jsoncpp-1.9.6",
    build_file = "//patches:jsoncpp.BUILD",
    patch_cmds = [
        "echo 'module(name=\"jsoncpp\", version=\"1.9.6\")' > MODULE.bazel",
        "echo 'bazel_dep(name=\"rules_cc\", version=\"0.2.16\")' >> MODULE.bazel",
    ],
)
bazel_dep(name = "postgres", version = "16.2.bcr.3")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "sqlite3", version = "3.51.1.bcr.1")

bazel_dep(name = "bazel_iwyu", version = "0.0.0")
git_override(
    module_name = "bazel_iwyu",
    remote = "https://github.com/storypku/bazel_iwyu.git",
    commit = "1fe9048c30469ac506498c3c740ce47475ad3361",
    patch_cmds = [
        "sed -i '1i load(\"@rules_shell//shell:sh_binary.bzl\", \"sh_binary\")' bazel/iwyu/BUILD.bazel",
        "sed -i '1i load(\"@rules_cc//cc:defs.bzl\", \"CcInfo\", \"cc_common\")' bazel/iwyu/iwyu.bzl",
        "echo 'bazel_dep(name = \"rules_shell\", version = \"0.6.1\")' >> MODULE.bazel",
        "echo 'bazel_dep(name = \"rules_cc\", version = \"0.2.16\")' >> MODULE.bazel",
    ],
)
